# OpenZax

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  STATUS.md  TODO.md  Trunk.toml  index.html  install-rust.ps1  install.bat  install.ps1  install.sh  package.json  test-key.private.key  test-key.public.key
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/ai-core/: Cargo.toml
crates/ai-core/src/: context.rs  delegation.rs  deterministic.rs  lib.rs  planner.rs  router.rs  selfhealing.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  tui.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  error.rs  event.rs  lib.rs  storage.rs
crates/enterprise/: Cargo.toml
crates/enterprise/src/: auth.rs  compliance.rs  fleet.rs  lib.rs  orchestration.rs  organization.rs  rbac.rs
crates/llm-engine/: Cargo.toml  README.md
crates/llm-engine/src/: cloud.rs  error.rs  lib.rs  local.rs  model.rs  router.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: api.rs  error.rs  lib.rs  scanner.rs  storage.rs  types.rs  verification.rs
crates/mcp-client/: Cargo.toml  README.md
crates/mcp-client/src/: client.rs  error.rs  lib.rs  protocol.rs
crates/mcp-client/src/transport/: http.rs  mod.rs  stdio.rs
crates/mcp-client/tests/: integration_test.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: anomaly.rs  audit.rs  capability.rs  killswitch.rs  lib.rs  quarantine.rs  vault.rs  vfs.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  terminal.rs
crates/skills-macros/: Cargo.toml
crates/skills-macros/src/: lib.rs
crates/skills-sdk/: Cargo.toml
crates/skills-sdk/src/: lib.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: assertions.rs  lib.rs  mock_host.rs  runner.rs
crates/wasm-runtime/: Cargo.toml  README.md
crates/wasm-runtime/src/: error.rs  host.rs  lib.rs  sandbox.rs
crates/wasm-runtime/tests/: integration_test.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: executor.rs  graph.rs  lib.rs  registry.rs  subworkflow.rs  triggers.rs
docs/: cli-guide.md  llm-engine-guide.md  master-architecture-blueprint.md  mcp-client-guide.md  project-plan.md  skills-sdk-guide.md  wasm-runtime-guide.md
examples/hello-skill/: Cargo.toml  README.md  build.sh
examples/hello-skill/.cargo/: config.toml
examples/hello-skill/src/: lib.rs
examples/mcp-filesystem/: Cargo.toml  README.md  main.rs
sdk/python/: README.md  pyproject.toml
sdk/python/src/openzax/: __init__.py  host.py  skill.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: host-bindings.ts  index.ts  skill.ts
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/frontend/: index.html
tauri-app/src/: commands.rs  lib.rs  main.rs  state.rs
ui/: Cargo.toml  style.css
ui/src/: api.rs  lib.rs
ui/src/components/: chat.rs  command_palette.rs  markdown.rs  mod.rs  sidebar.rs
ui/src/pages/: home.rs  settings.rs
wit/: config.wit  events.wit  fs.wit  http-client.wit  kv-store.wit  logging.wit  world.wit
