[package]
name = "openzax-ui"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
] }
console_error_panic_hook = "0.1"
tracing = { workspace = true }
tracing-wasm = "0.2"

# Tauri API
[dependencies.tauri-sys]
version = "0.6"
features = ["all"]

[features]
default = []
hydrate = ["leptos/hydrate"]
