[package]
name = "openzax-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenZax - Secure AI Development Assistant CLI"
homepage = "https://github.com/zAxCoder/OpenZax"
repository = "https://github.com/zAxCoder/OpenZax"
keywords = ["ai", "assistant", "cli", "wasm", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "openzax"
path = "src/main.rs"

[dependencies]
openzax-core = { path = "../core" }
openzax-shell = { path = "../shell" }
openzax-llm-engine = { path = "../llm-engine", optional = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = { workspace = true }
dirs = "5.0"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
base64 = "0.22"
zip = "2.1"

[features]
default = []
llm-engine = ["openzax-llm-engine"]
# llama-cpp feature disabled until llama-cpp-rs is available
# llama-cpp = ["llm-engine", "openzax-llm-engine/llama-cpp"]
