[package]
name = "openzax-enterprise"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Enterprise features: SSO, RBAC, fleet management, audit compliance"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
