[package]
name = "openzax-mcp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openzax-core = { path = "../core" }
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
futures = "0.3"
