[package]
name = "openzax-security"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Zero-trust security kernel for OpenZax"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
age = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
bitvec = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
