[package]
name = "openzax-skills-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SDK for building OpenZax skills in Rust"

[dependencies]
openzax-skills-macros = { path = "../skills-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "0.39"
