[package]
name = "openzax-test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Test harness for OpenZax WASM skills"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
