[package]
name = "openzax-workflow"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Visual workflow automation engine for OpenZax"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
cron = "0.12"
notify = "7.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
