[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openzax-sdk"
version = "0.5.0"
description = "Python SDK for OpenZax skill development"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "OpenZax Team" }]
keywords = ["openzax", "wasm", "skill", "sdk", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.7",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openzax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
